# thrift-parser

./: Cargo.toml
src/: basic.rs  definition.rs  document.rs  field.rs  functions.rs  header.rs
